fix layout issue

--- a/src/style/scss/_layout.scss
+++ b/src/style/scss/_layout.scss
@@ -2,7 +2,7 @@
     padding: 1em 2em;
 }
 
-article, article.asset article.padded-container {
+article, article.asset, article.padded-container {
     background: $extra-light-grey;
     padding: 0;
     width: 100%;
